// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckIcon [common] example testing should match snapshot(s) for 1.default 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CheckIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M6.327 12.99l-5.22-5.018L2.494 6.53l3.805 3.66 7.18-7.18 1.414 1.414z"
  />
</Icon>
`;

exports[`CheckIcon [common] example testing should match snapshot(s) for 1.default 2`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CheckIcon"
  isBadge={true}
  isClickable={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M6.327 12.99l-5.22-5.018L2.494 6.53l3.805 3.66 7.18-7.18 1.414 1.414z"
  />
</Icon>
`;

exports[`CheckIcon [common] example testing should match snapshot(s) for 2.clickable 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CheckIcon"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M6.327 12.99l-5.22-5.018L2.494 6.53l3.805 3.66 7.18-7.18 1.414 1.414z"
  />
</Icon>
`;

exports[`CheckIcon [common] example testing should match snapshot(s) for 2.clickable 2`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CheckIcon"
  isBadge={true}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M6.327 12.99l-5.22-5.018L2.494 6.53l3.805 3.66 7.18-7.18 1.414 1.414z"
  />
</Icon>
`;

exports[`CheckIcon [common] example testing should match snapshot(s) for 3.disabled 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CheckIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M6.327 12.99l-5.22-5.018L2.494 6.53l3.805 3.66 7.18-7.18 1.414 1.414z"
  />
</Icon>
`;

exports[`CheckIcon [common] example testing should match snapshot(s) for 3.disabled 2`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-CheckIcon"
  isBadge={true}
  isClickable={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M6.327 12.99l-5.22-5.018L2.494 6.53l3.805 3.66 7.18-7.18 1.414 1.414z"
  />
</Icon>
`;
